testsuite/tests/grammar/invalid_lexers/invalid_null.lkt
import common

lexer foo_lexer {
    Example <- null (Example)
}
